package com.testmatick;

public interface Drawable {
    void draw();
}
